--- a/share/applications/howl.desktop
+++ b/share/applications/howl.desktop
@@ -2,7 +2,7 @@
 Name=Howl
 GenericName=Howl Editor
 Comment=Code with the pack
-Exec=howl --reuse %F
+Exec=howl %F
 Terminal=false
 Type=Application
 StartupNotify=true
